#97 - cropper page - flex fix

--- a/src/screens-content/image-configurator/image-configurator-layout.module.scss
+++ b/src/screens-content/image-configurator/image-configurator-layout.module.scss
@@ -1,12 +1,12 @@
 .container {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: start;
   padding: 1rem 0;
 }
 
 .dropzoneBox {
-  max-width: 700px;
+  max-width: 600px;
   margin: 1rem;
 }
 
